# tech-challenge-4-FIAP

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
app/: functions_test.ipynb  lstm_stock_model.h5  main.py  stock_prediction_lstm_model.keras
app/dto/: priceDTO.py
app/service/: prediction_service.py  scheduler_service.py  update_service.py
model/: monitoramento_grafana.json  script.ipynb  script2.ipynb
